--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,8 @@ workmanager = "2.8.1"
 window = "1.0.0"
 lifecycle = "2.5.1"
 
+leakcanary-android = "2.12"
+
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
@@ -37,6 +39,7 @@ lifecycle-compiler= { group = "androidx.lifecycle", name = "lifecycle-compiler",
 lifecycle-process= { group = "androidx.lifecycle", name = "lifecycle-process", version.ref = "lifecycle" }
 activity-ktx= { group = "androidx.activity", name = "activity-ktx", version.ref = "activity-ktx" }
 fragment-ktx= { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragment-ktx" }
+leakcanary-android= { group = "com.squareup.leakcanary", name = "leakcanary-android", version.ref = "leakcanary-android" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
