--- a/gradle.properties
+++ b/gradle.properties
@@ -22,5 +22,5 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 android.nonFinalResIds=false
-android.experimental.lint.version=8.2.0-alpha14
+#android.experimental.lint.version=8.2.0-alpha14
 
