--- a/gradle.properties
+++ b/gradle.properties
@@ -23,4 +23,4 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 android.nonFinalResIds=false
 #android.experimental.lint.version=8.2.0-alpha14
-
+android.enableJetifier=true
