--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.2.0-alpha15"
+brv = "1.5.0"
 kotlin = "1.8.21"
 core-ktx = "1.10.1"
 appcompat = "1.6.1"
@@ -8,6 +9,7 @@ constraintlayout = "2.1.4"
 activity-ktx = "1.6.1"
 fragment-ktx = "1.5.5"
 
+smart-refresh-layout = "2.0.6"
 workmanager = "2.8.1"
 window = "1.0.0"
 lifecycle = "2.5.1"
@@ -26,20 +28,31 @@ espresso-core = { group = "androidx.test.espresso", name = "espresso-core", vers
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+
 workmanager-work-runtime = { group = "androidx.work", name = "work-runtime", version.ref = "workmanager" }
 workmanager-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workmanager" }
 workmanager-work-multiprocess = { group = "androidx.work", name = "work-multiprocess", version.ref = "workmanager" }
+
 window = { group = "androidx.window", name = "window", version.ref = "window" }
 window-testing = { group = "androidx.window", name = "window-testing", version.ref = "window" }
+
 lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
 lifecycle-livedata-ktx= { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycle" }
 lifecycle-service= { group = "androidx.lifecycle", name = "lifecycle-service", version.ref = "lifecycle" }
 lifecycle-compiler= { group = "androidx.lifecycle", name = "lifecycle-compiler", version.ref = "lifecycle" }
 lifecycle-process= { group = "androidx.lifecycle", name = "lifecycle-process", version.ref = "lifecycle" }
+
 activity-ktx= { group = "androidx.activity", name = "activity-ktx", version.ref = "activity-ktx" }
 fragment-ktx= { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragment-ktx" }
+
 leakcanary-android= { group = "com.squareup.leakcanary", name = "leakcanary-android", version.ref = "leakcanary-android" }
+
+smart-refresh-footer-classics = { group = "io.github.scwang90", name="refresh-footer-classics", version.ref = "smart-refresh-layout" }
+smart-refresh-header-classics = { group = "io.github.scwang90",name = "refresh-header-classics", version.ref = "smart-refresh-layout" }
+smart-refresh-layout-kernel = { group = "io.github.scwang90", name="refresh-layout-kernel", version.ref = "smart-refresh-layout" }
+brv = { group = "com.github.liangjingkanji",name = "BRV", version.ref = "brv" }
+
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
