--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 agp = "8.2.0-alpha15"
 brv = "1.5.0"
 kotlin = "1.8.21"
+ksp = "1.9.10-1.0.13"
 core-ktx = "1.10.1"
 appcompat = "1.6.1"
 material = "1.9.0"
@@ -57,4 +58,5 @@ brv = { group = "com.github.liangjingkanji",name = "BRV", version.ref = "brv" }
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 
