--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
-agp = "8.2.0-alpha15"
-brv = "1.5.0"
+agp = "8.2.1"
+brv = "1.5.8"
 kotlin = "1.8.21"
 ksp = "1.9.10-1.0.13"
 core-ktx = "1.10.1"
